--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -89,16 +89,15 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="316dp"
-        android:layout_height="136dp"
-        android:layout_marginEnd="-45dp"
+        android:layout_width="409dp"
+        android:layout_height="230dp"
         android:src="@drawable/elem2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginEnd="-10dp"/>
 
     <ImageView
         android:id="@+id/imageView10"
