--- a/app/src/main/res/layout/fragment_student_cabinet.xml
+++ b/app/src/main/res/layout/fragment_student_cabinet.xml
@@ -29,19 +29,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView_telephone"
+            android:id="@+id/textView_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_semibold"
             android:layout_marginStart="15dp"
             android:layout_marginTop="35dp"
             android:textSize="16sp"
-            android:text="Номер телефона"
+            android:text="Почта"
             android:visibility="visible"/>
 
 
         <TextView
-            android:id="@+id/textView_edit_number"
+            android:id="@+id/textView_edit_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_regular"
@@ -53,47 +53,10 @@
 
         <!-- EditText -->
         <EditText
-            android:id="@+id/editText_edit_number"
+            android:id="@+id/editText_edit_email"
             android:layout_width="match_parent"
             android:fontFamily="@font/montserrat_regular"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
-
-    </LinearLayout>
-
-    <!-- Второе редактируемое поле -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_semibold"
-            android:layout_marginStart="15dp"
-            android:textSize="16sp"
-            android:text="Пароль"
-            android:visibility="visible"/>
-
-        <TextView
-            android:id="@+id/textView_edit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
-            android:layout_marginStart="15dp"
-            android:textSize="16sp"
-            android:layout_marginTop="5dp"
-            android:text="Изменяемый текст 2"
-            android:visibility="visible" />
-
-        <!-- EditText -->
-        <EditText
-            android:id="@+id/editText_edit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_regular"
             android:visibility="gone" />
 
     </LinearLayout>
