--- a/app/src/main/res/layout/student_enter_1.xml
+++ b/app/src/main/res/layout/student_enter_1.xml
@@ -55,7 +55,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="56dp"
         android:ems="10"
-        android:hint="Номер телефона:"
+        android:hint="Почта:"
         android:inputType="text"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
